--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
     <base href="/">
     <meta charset="utf-8">
     <title>Home & Car Services</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 
     <script src="https://kit.fontawesome.com/5e7bf367ed.js" crossorigin="anonymous"></script>
